force-app/main/default/objects/Invoice_Opportunity__c/fields/USD_Expected_Amount__c.field-meta.xml
<CustomField>
    <fullName>USD_Expected_Amount__c</fullName>
    <formula>Expected_Amount__c * Supplier_Buyer_Map__r.Marketplace__r.FX_Rate_for_MI__r.rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>USD Expected Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>