force-app/main/default/objects/Invoice_Opportunity__c/fields/USD_Weighted_Amount__c.field-meta.xml
<CustomField>
    <fullName>USD_Weighted_Amount__c</fullName>
    <formula>(Sucess__c /100)* USD_Expected_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>USD Weighted Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>