force-app/main/default/objects/Invoice_Opportunity__c/fields/Volume_month__c.field-meta.xml
<CustomField>
    <fullName>Volume_month__c</fullName>
    <inlineHelpText>Expected Volume / month</inlineHelpText>
    <label>Volume / month</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>50-200</fullName>
            </value>
            <value>
                <fullName>200-500</fullName>
            </value>
            <value>
                <fullName>500-750</fullName>
            </value>
            <value>
                <fullName>1000-1500</fullName>
            </value>
            <value>
                <fullName>1500-2000</fullName>
            </value>
            <value>
                <fullName>&gt;2000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>