force-app/main/default/objects/Invoice_Opportunity__c/fields/Welcome_call_Done__c.field-meta.xml
<CustomField>
    <fullName>Welcome_call_Done__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Welcome call Done</label>
    <type>Checkbox</type>
</CustomField>