force-app/main/default/objects/Invoice_Opportunity__c/fields/X5_Supplier_Financials__c.field-meta.xml
<CustomField>
    <fullName>X5_Supplier_Financials__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>tick when uploaded in sales force</inlineHelpText>
    <label>Buyer Financials(exceptBigBuyer)(SALES)A</label>
    <type>Checkbox</type>
</CustomField>