force-app/main/default/objects/Invoice_Opportunity__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Lead_Name__c</columns>
    <columns>Lead_Name_Supplier__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>