force-app/main/default/objects/Invoice_Opportunity__c/listViews/All_Sales_Opportunity.listView-meta.xml
<ListView>
    <fullName>All_Sales_Opportunity</fullName>
    <columns>NAME</columns>
    <columns>Sucess__c</columns>
    <columns>Date_First_Invoice__c</columns>
    <columns>Top_of_the_Month__c</columns>
    <columns>Opportunity_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Sales Opportunities</label>
</ListView>