force-app/main/default/objects/Invoice_Opportunity__c/listViews/Arpita_Opportunity_LC.listView-meta.xml
<ListView>
    <fullName>Arpita_Opportunity_LC</fullName>
    <columns>NAME</columns>
    <columns>Sales_Owner__c</columns>
    <columns>Operation_Owner__c</columns>
    <columns>Product_type__c</columns>
    <columns>Buyer_Name__c</columns>
    <columns>Supplier_name__c</columns>
    <columns>Process_Status__c</columns>
    <columns>CL_Provided_by_insurer__c</columns>
    <columns>Opportunity_Status__c</columns>
    <columns>Date_Term_sheet_Signedt__c</columns>
    <columns>Ops_Comments__c</columns>
    <columns>Date_First_Invoice__c</columns>
    <columns>Credit_Limit__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Opportunity_Status__c</field>
        <operation>contains</operation>
        <value>Active,Pipeline,OIP,Others,Inactive,Dropped</value>
    </filters>
    <filters>
        <field>Sales_Owner__c</field>
        <operation>contains</operation>
        <value>Arpita</value>
    </filters>
    <label>Arpita Opportunity LC</label>
</ListView>