force-app/main/default/objects/Invoice_Opportunity__c/listViews/BattlePlan_Meeting.listView-meta.xml
<ListView>
    <fullName>BattlePlan_Meeting</fullName>
    <booleanFilter>1 AND ((2 AND 3) OR 4)</booleanFilter>
    <columns>NAME</columns>
    <columns>Ternsheet_Status__c</columns>
    <columns>Supplier_Buyer_txt__c</columns>
    <columns>Ops_Comments__c</columns>
    <columns>Planned_Date_for_CC__c</columns>
    <columns>Opportunity_Status__c</columns>
    <columns>Sales_Owner__c</columns>
    <columns>Operation_Owner__c</columns>
    <columns>Risk_Owner__c</columns>
    <columns>SDR__c</columns>
    <columns>Expected_Tenor__c</columns>
    <columns>Insurance__c</columns>
    <columns>CCY__c</columns>
    <columns>CL_Provided_by_insurer__c</columns>
    <columns>First_Cycle_USD_Equiv__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Opportunity_Status__c</field>
        <operation>equals</operation>
        <value>OIP</value>
    </filters>
    <filters>
        <field>Date_First_Invoice__c</field>
        <operation>notEqual</operation>
        <value>THIS_MONTH</value>
    </filters>
    <filters>
        <field>Top_of_the_Month__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Sucess__c</field>
        <operation>equals</operation>
    </filters>
    <label>BattlePlan Meeting OIP 1/2</label>
</ListView>