force-app/main/default/objects/Invoice_Opportunity__c/listViews/Copy_of_BattlePlan_Meeting_OIP.listView-meta.xml
<ListView>
    <fullName>Copy_of_BattlePlan_Meeting_OIP</fullName>
    <booleanFilter>1 AND 2</booleanFilter>
    <columns>NAME</columns>
    <columns>Supplier_Buyer_txt__c</columns>
    <columns>Top_of_the_Month__c</columns>
    <columns>Ternsheet_Status__c</columns>
    <columns>Supplier_Buyer_Map__c</columns>
    <columns>Operation_Owner__c</columns>
    <columns>Ops_Comments__c</columns>
    <columns>Planned_Date_for_CC__c</columns>
    <columns>Sales_Owner__c</columns>
    <columns>SALES_TASK__c</columns>
    <columns>Risk_Owner__c</columns>
    <columns>RISK_TASK__c</columns>
    <columns>Legal_Owner__c</columns>
    <columns>LEGAL_TASK__c</columns>
    <columns>First_Cycle_USD_Equiv__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Opportunity_Status__c</field>
        <operation>equals</operation>
        <value>OIP</value>
    </filters>
    <filters>
        <field>Top_of_the_Month__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Onboarding OIP 2/2 Priority</label>
</ListView>