force-app/main/default/objects/Invoice_Opportunity__c/listViews/Funding.listView-meta.xml
<ListView>
    <fullName>Funding</fullName>
    <columns>NAME</columns>
    <columns>Sales_Owner__c</columns>
    <columns>Opportunity_Status__c</columns>
    <columns>Process_Status__c</columns>
    <columns>Buyer_Name__c</columns>
    <columns>Buyer_Country__c</columns>
    <columns>Supplier_name__c</columns>
    <columns>SDR__c</columns>
    <columns>First_invoice_Amount__c</columns>
    <columns>Date_First_Invoice__c</columns>
    <columns>Date_Termsheet_Sent__c</columns>
    <columns>Date_Term_sheet_Signedt__c</columns>
    <columns>CL_Provided_by_insurer__c</columns>
    <columns>Good_service_Description__c</columns>
    <columns>Ops_Comments__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Buyer_Name__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Opportunity_Status__c</field>
        <operation>equals</operation>
        <value>Active,Pipeline,OIP,Others</value>
    </filters>
    <filters>
        <field>Opportunity_Status__c</field>
        <operation>equals</operation>
        <value>Pipeline,OIP</value>
    </filters>
    <label>Funding View</label>
</ListView>