force-app/main/default/objects/Invoice_Opportunity__c/listViews/Marc_JP_Morgan_Manish_Shiv.listView-meta.xml
<ListView>
    <fullName>Marc_JP_Morgan_Manish_Shiv</fullName>
    <columns>NAME</columns>
    <columns>Sales_Owner__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Opportunity_Status__c</columns>
    <columns>Sales_Comments__c</columns>
    <columns>Date_Answer_Insurer__c</columns>
    <columns>Buyer_Name__c</columns>
    <columns>Buyer_Country__c</columns>
    <columns>Supplier_name__c</columns>
    <columns>CL_Provided_by_insurer__c</columns>
    <columns>Lead_Name_Supplier__c</columns>
    <columns>Lead_Name__c</columns>
    <columns>First_invoice_Amount__c</columns>
    <columns>Date_First_Invoice__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sales_Owner__c</field>
        <operation>contains</operation>
        <value>JP,Marc,Morgan</value>
    </filters>
    <filters>
        <field>Opportunity_Status__c</field>
        <operation>equals</operation>
        <value>Active,Pipeline,OIP,Others,Inactive</value>
    </filters>
    <filters>
        <field>Supplier_name__c</field>
        <operation>notContain</operation>
        <value>Sino</value>
    </filters>
    <label>Marc , JP, Morgan ,Shiv</label>
</ListView>