force-app/main/default/objects/Invoice_Opportunity__c/listViews/Onboarding_OIP_2_2_Priority.listView-meta.xml
<ListView>
    <fullName>Onboarding_OIP_2_2_Priority</fullName>
    <booleanFilter>1 AND 2</booleanFilter>
    <columns>NAME</columns>
    <columns>Supplier_Buyer_Map__c</columns>
    <columns>Opportunity_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Opportunity_Status__c</field>
        <operation>equals</operation>
        <value>OIP</value>
    </filters>
    <filters>
        <field>Top_of_the_Month__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Onboarding OIP 2/2 Priority</label>
</ListView>