force-app/main/default/objects/Invoice_Opportunity__c/listViews/Opp_Active.listView-meta.xml
<ListView>
    <fullName>Opp_Active</fullName>
    <columns>NAME</columns>
    <columns>Supplier_Buyer_txt__c</columns>
    <columns>Sales_Owner__c</columns>
    <columns>Opportunity_Status__c</columns>
    <columns>Operation_Owner__c</columns>
    <columns>SDR__c</columns>
    <columns>Expected_Tenor__c</columns>
    <columns>Insurance__c</columns>
    <columns>Ops_Comments__c</columns>
    <columns>Planned_Date_for_CC__c</columns>
    <columns>Comments_Funding__c</columns>
    <columns>CL_Provided_by_insurer__c</columns>
    <columns>Supplier_Buyer_Map__c</columns>
    <columns>First_invoice_Amount__c</columns>
    <columns>Date_First_Invoice_Financed__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Opportunity_Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>Opp  Active</label>
</ListView>