force-app/main/default/objects/Invoice_Opportunity__c/listViews/Opportunities_termsheet_sent.listView-meta.xml
<ListView>
    <fullName>Opportunities_termsheet_sent</fullName>
    <columns>NAME</columns>
    <columns>Sales_Owner__c</columns>
    <columns>Direct_Contact_with_Customer__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Buyer_Name__c</columns>
    <columns>Buyer_Country__c</columns>
    <columns>Supplier_name__c</columns>
    <columns>CL_Provided_by_insurer__c</columns>
    <columns>Process_Status__c</columns>
    <columns>Date_Termsheet_Sent__c</columns>
    <columns>First_invoice_Amount__c</columns>
    <columns>Date_First_Invoice__c</columns>
    <columns>Opportunity_Status__c</columns>
    <columns>Ops_Comments__c</columns>
    <columns>Sales_Comments__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Opportunity_Status__c</field>
        <operation>equals</operation>
        <value>Pipeline,OIP,Others,Inactive</value>
    </filters>
    <filters>
        <field>Ternsheet_Status__c</field>
        <operation>contains</operation>
        <value>Sent</value>
    </filters>
    <label>Opportunities termsheet sent</label>
</ListView>